[package]
edition = "2021"
name = "jnidemo"
version = "0.1.0"


[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.25", features = ["tokio"] }

[[bin]]
name = "uniffi-bindgen"
required-features = ["uniffi/cli"]
